preventing unecessary overflow

--- a/frontend/src/components/layout.scss
+++ b/frontend/src/components/layout.scss
@@ -82,10 +82,10 @@ body {
         display: none;
       }
 
-      padding: 30px;
+      padding: 30px 30px 0 30px;
 
       @media (min-width: 768px) {
-        padding: 60px;
+        padding: 60px 60px 0 60px;
       }
     }
   }
@@ -128,6 +128,10 @@ body {
       font-size: $fontSizeBase;
       line-height: $fontSizeBase * 1.25;
     }
+  }
+
+  .requiredField {
+    color: $colorHFBeige;
   }
 
   input[type="text"],
